# peony

./: .gitignore  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/services/: llm_cloner.py  webite_scraper.py  website_cloner.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
