[project]
name = "backend"
version = "0.1.0"
description = "FastAPI website cloning service"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "aiohttp",
    "pydantic",
    "python-multipart",
    "playwright",
    "beautifulsoup4",
    "browserbase"
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true 